...
    <string name="facebook_app_id">104609210014543</string>
    <!-- Google Place Key -->
    <string name="google_maps_key">AIzaSyCCCx8Xr6CrMgXfZI3aj2it2TWF4lZfdls</string>

    <!-- floating context menu values -->
    <string name="flt_ctx_menu_delete">Delete</string>
    <string name="flt_ctx_menu_edit">Edit</string>

    <!-- Maximum lengths -->
    <string name="max_length_title">35</string>
    <string name="max_length_description">1000</string>

    <!-- Error messages -->
    <string name="error_title_empty">The title can not be empty !</string>
    <string name="error_title_duplicated">This title is already taken !</string>
    <string name="error_title_contains_contributors_separator">"You cannot enter a title containing "</string>
    <string name="error_location_name_empty">The location name can not be empty !</string>
    <string name="error_location_name_duplicated">You can\'t use the same name for 2 locations !</string>
    <string name="error_authentication_failed">Authentication failed.</string>
    <string name="error_authentication_canceled">Authentication canceled.</string>
    <string name="error_valid_title_firebase">Title cannot contain . # $ [ ]</string>


    <!-- Buttons description-->
...
    <string name="custom_text">Custom</string>

    <!-- Unfilled task information messages-->
    <string name="unfilled_param">"—"</string>

    <!-- Preference key -->
    <string name="application_prefs_name">ch.epfl.sweng.TaskIt</string>
    <string name="new_user">FIRST_USER_LOGIN</string>
    <string name="first_launch">FIRST_LAUNCH</string>

    <string name="unfilled_duration">Not decided yet</string>
    <string name="unfilled_location">Not decided yet</string>


...
