...
                android:layout_marginEnd="10dp"
                android:onClick="openNewLocationActivity"
                android:src="@drawable/ic_add_white_48dp"
                app:backgroundTint="@color/colorPrimary"
                app:elevation="3dp"
                app:fabSize="normal"
                android:id="@+id/add_location_button" />

        </FrameLayout>
    </LinearLayout>
