...
            <View
                android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_height="1dp" />

            <ListView
                android:id="@+id/list_view_locations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="NestedScrolling" />

            <Space
                android:layout_width="match_parent"
...
